2002-07-08  Maciej W. Rozycki  <macro@ds2.pg.gda.pl>

	* config/tc-mips.c (load_address): Use non-trapping "daddu"
	instead of "dadd" in address calculations.
	(macro): Likewise.

2002-07-08  Alan Modra  <amodra@bigpond.net.au>

	* config/tc-i386.c (process_suffix): Remove intel mode movsx and
	movzx fudges.
	(md_assemble): Instead, zap the suffix here.

2002-07-03  Nick Clifton  <nickc@cambridge.redhat.com>

	* NEWS: Remove next release number until the release is actually
	upon us.

2002-07-03  Alan Modra  <amodra@bigpond.net.au>

	* Makefile.am (check-DEJAGNU): Revert 2002-06-25 change.
	Run "make dep-am".
	* Makefile.in: Regenerate.

2002-07-02  Martin Schwidefsky  <schwidefsky@de.ibm.com>

	* config/tc-s390.c (tc_s390_fix_adjustable): Prevent any adjustment
	to symbols in merge sections, even non pc-relative ones.

2002-06-29  Stephane Carrez  <stcarrez@nerim.fr>

	* config/tc-m68hc11.h (m68hc11_listing_header): Fix warning.

2002-06-29  Stephane Carrez  <stcarrez@nerim.fr>

	* config/tc-m68hc11.h (ELF_TC_SPECIAL_SECTIONS): New sections
	.softregs and .eeprom.

2002-06-28  David O'Brien  <obrien@FreeBSD.org>

	* NEWS: Note the next release is 2.13.

2002-06-26  Nick Clifton  <nickc@cambridge.redhat.com>

	* po/tr.po: New translation imported.

2002-06-26  Elias Athanasopoulos  <eathan@otenet.gr>

	* ecoff.c: (get_tag): Replace strcpy with xstrdup.
	(ecoff_directive_def): Likewise.
	(ecoff_directive_tag): Likewise.
	* listing.c (file_info): Likewise.
	* hash.c (what): Likewise.

2002-06-25  H.J. Lu <hjl@gnu.org>

	* Makefile.am (check-DEJAGNU): Set LC_ALL=C and export it.
	* Makefile.in: Regenerated.

2002-06-19  Dhananjay R. Deshpande <dhananjayd@kpit.com>

	* config/tc-sh.c (get_specific): Revert 2002-05-01 change.
	(assemble_ppi): Generate warning if the same register is used
	twice as destination in the same padd / pmuls instruction.

2002-06-18  Dave Brolley  <brolley@redhat.com>

	From Catherine Moore, Michael Meissner, Richard Sandiford, Dave Brolley